--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "mywp1",
+  "name": "MyWP1",
   "version": "1.0.0",
   "description": "ProjectPortfolio",
   "main": "index.js",
   "dependencies": {
-    "jQuery": "^1.7.4",
+    "autoprefixer": "^8.6.0",
+    "css-minify": "^1.0.1",
     "jquery": "^3.3.1",
-    "node-sass": "^4.9.0"
+    "node-sass": "^4.9.0",
+    "uglify-js": "^3.4.0"
   },
   "devDependencies": {},
   "scripts": {
