--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "node-sass": "^4.9.0",
     "uglify-js": "^3.4.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "node-sass": "^4.9.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass --include-path scss scss/main.scss public/css/main.css",
+    "watch-css": "node-sass --watch scss scss/main.scss public/css/main.css"
   },
   "author": "",
   "license": "ISC"
